--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="User Authentication App with React and Flask"
     />
-    <title>Auth App</title>
+    <title>Trivity</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
